Improve interface integration

--- a/SuccessStory.csproj
+++ b/SuccessStory.csproj
@@ -133,6 +133,9 @@
     <Compile Include="Views\Interface\SuccessStoryButtonHeader.xaml.cs">
       <DependentUpon>SuccessStoryButtonHeader.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\Interface\SuccessStoryToggleButton.xaml.cs">
+      <DependentUpon>SuccessStoryToggleButton.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\SuccessStorySettingsView.xaml.cs">
       <DependentUpon>SuccessStorySettingsView.xaml</DependentUpon>
     </Compile>
@@ -338,6 +341,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Interface\SuccessStoryButtonHeader.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Interface\SuccessStoryToggleButton.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
