--- a/SuccessStory.csproj
+++ b/SuccessStory.csproj
@@ -112,6 +112,7 @@
   <ItemGroup>
     <Compile Include="Clients\GogAchievements.cs" />
     <Compile Include="Clients\OriginAchievements.cs" />
+    <Compile Include="Clients\RetroAchievements.cs" />
     <Compile Include="Clients\SteamAchievements.cs" />
     <Compile Include="Models\GameAchievements.cs" />
     <Compile Include="Models\Achievements.cs" />
