--- a/packages.config
+++ b/packages.config
@@ -5,4 +5,6 @@
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="PlayniteSDK" version="5.2.0" targetFramework="net462" />
+  <package id="protobuf-net" version="2.0.0.668" targetFramework="net462" />
+  <package id="SteamKit2" version="1.8.3" targetFramework="net462" />
 </packages>
