--- a/SuccessStory.csproj
+++ b/SuccessStory.csproj
@@ -103,6 +103,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -118,6 +119,7 @@
     <Compile Include="Clients\OriginAchievements.cs" />
     <Compile Include="Clients\RetroAchievements.cs" />
     <Compile Include="Clients\SteamAchievements.cs" />
+    <Compile Include="Clients\XboxAchievements.cs" />
     <Compile Include="Models\GameAchievements.cs" />
     <Compile Include="Models\Achievements.cs" />
     <Compile Include="Database\AchivementsDatabase.cs" />
@@ -139,6 +141,7 @@
     <Compile Include="PlayniteResources\OriginLibrary\Models\UsageReponse.cs" />
     <Compile Include="PlayniteResources\OriginLibrary\Services\OriginAccountClient.cs" />
     <Compile Include="PlayniteResources\OriginLibrary\Services\OriginApiClient.cs" />
+    <Compile Include="PlayniteResources\XboxLibrary\Models\AuthenticationData.cs" />
     <Compile Include="SuccessStory.cs" />
     <Compile Include="SuccessStorySettings.cs" />
     <Compile Include="Views\Interface\SuccessStoryAchievementsCompact.xaml.cs">
