--- a/SuccessStory.csproj
+++ b/SuccessStory.csproj
@@ -181,6 +181,7 @@
     <None Include="extension.yaml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="LICENSE" />
     <None Include="packages.config" />
     <Resource Include="Resources\font.ttf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
