updated plugin infos

--- a/extension.yaml
+++ b/extension.yaml
@@ -10,3 +10,5 @@ Links:
     Url: https://playnite.link/forum/thread-275.html
   - Name: Plugin Github
     Url: https://github.com/Lacro59/playnite-successstory-plugin
+  - Name: Plugin Translations
+    Url: https://crowdin.com/project/playnite-extensions
