--- a/extension.yaml
+++ b/extension.yaml
@@ -10,5 +10,5 @@ Links:
     Url: https://playnite.link/forum/thread-275.html
   - Name: Plugin Github
     Url: https://github.com/Lacro59/playnite-successstory-plugin
-  - Name: Plugin Translations
+  - Name: Plugin translations
     Url: https://crowdin.com/project/playnite-extensions
