--- a/SuccessStory.csproj
+++ b/SuccessStory.csproj
@@ -149,6 +149,9 @@
     <Compile Include="Views\Interface\SuccessStoryUserStats.xaml.cs">
       <DependentUpon>SuccessStoryUserStats.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\SuccessStoryOneGameView.xaml.cs">
+      <DependentUpon>SuccessStoryOneGameView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\SuccessStorySettingsView.xaml.cs">
       <DependentUpon>SuccessStorySettingsView.xaml</DependentUpon>
     </Compile>
@@ -265,6 +268,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Interface\SuccessStoryUserStats.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\SuccessStoryOneGameView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
