--- a/packages.config
+++ b/packages.config
@@ -7,4 +7,5 @@
   <package id="PlayniteSDK" version="5.5.0" targetFramework="net462" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net462" />
   <package id="SteamKit2" version="1.8.3" targetFramework="net462" />
+  <package id="YamlDotNet" version="9.1.0" targetFramework="net462" />
 </packages>
